--- a/server/index.html
+++ b/server/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiplayer Room</title>
+    <title>Call Break Game</title>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f0f2f5; }
+        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f0f2f5; }
         #game-container { text-align: center; padding: 40px; background-color: white; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
         h1 { color: #333; }
         p { color: #666; font-size: 1.2rem; }
@@ -19,28 +19,39 @@
 
 <div id="game-container">
     <div id="waiting-room">
-        <h1>Waiting for Players...</h1>
+        <h1>Waiting Room</h1>
         <p>Players in room: <span id="player-count">0</span> / 4</p>
         <button id="join-button">Join Game</button>
     </div>
 
     <div id="game-state">
         <h2>Game has started! 🎉</h2>
-        <p>All 4 players are here. Now, your game logic would take over.</p>
+        <p>All 4 players have joined. The game can now begin!</p>
     </div>
 </div>
 
-<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 <script>
-    const socket = io();
+    // =================== CLIENT-SIDE CONNECTION ===================
+    // Connect to your LIVE backend server on Render
+    const socket = io("https://call-break-server.onrender.com");
+    // ============================================================
 
     const joinButton = document.getElementById('join-button');
     const playerCountSpan = document.getElementById('player-count');
     const waitingRoomDiv = document.getElementById('waiting-room');
     const gameStateDiv = document.getElementById('game-state');
-    const roomName = 'main-room'; // You can make this dynamic
+    const roomName = 'main-room'; // A default room name
 
     // --- Event Listeners from Server ---
+
+    socket.on('connect', () => {
+        console.log('Successfully connected to the server!', socket.id);
+    });
+
+    socket.on('connect_error', (err) => {
+        console.error('Socket connection error:', err.message);
+    });
 
     // Update the player count on the UI
     socket.on('playerCountUpdate', (count) => {
@@ -49,22 +60,19 @@
 
     // The server has signaled the game to start
     socket.on('gameStart', (data) => {
-        console.log(data.message);
-        // Hide the waiting room UI and show the game state UI
+        console.log('Server says:', data.message);
         waitingRoomDiv.style.display = 'none';
         gameStateDiv.style.display = 'block';
 
         // ** YOUR GAME START LOGIC GOES HERE **
-        // For example, initialize the game board, characters, etc.
     });
 
     // --- Client Actions to Server ---
 
-    // Handle the join button click
     joinButton.addEventListener('click', () => {
         socket.emit('joinRoom', roomName);
-        joinButton.textContent = 'Waiting for others...';
-        joinButton.disabled = true; // Disable the button after joining
+        joinButton.textContent = 'Waiting for other players...';
+        joinButton.disabled = true;
     });
 
 </script>
